Fix text overflow in info modal

--- a/style.css
+++ b/style.css
@@ -367,4 +367,5 @@ form {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  word-break: break-word;
 }
